<resources>
    <string name="app_name">wheather_app</string>
    <string name="_000_hpa">000 hpa</string>
    <string name="sea">Sea</string>
    <string name="_00_00">00:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="_00_">00:00</string>
    <string name="sunset">Sunset</string>
    <string name="sunny">Sunny</string>
    <string name="condiation">Condiation</string>
    <string name="_0_00m_s">0.00M/S</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_00">00%</string>
    <string name="humidity">Humidity</string>
    <string name="sunnyhh">Sunny</string>
</resources>