<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_background"
    android:background="@drawable/sunny_background"
    tools:context=".Home">

    <SearchView


        android:id="@+id/searchView"
        android:layout_width="366dp"
        android:layout_height="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ssearch_view_shape"
        android:iconifiedByDefault="false"
        android:queryHint="search for your city"
        android:searchIcon="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/loctaion"
        android:drawablePadding="15dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:text=""
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/searchView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="Today"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersans_semibold"
        android:text="00:00'C"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />

    <TextView
        android:id="@+id/whether_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="@string/sunnyhh"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />

    <TextView
        android:id="@+id/MAX_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="MAX : 00:00 'C"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/MIN_temp"
        app:layout_constraintEnd_toEndOf="@+id/temp"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="@+id/temp"
        app:layout_constraintTop_toBottomOf="@+id/temp" />

    <TextView
        android:id="@+id/MIN_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="MIN : 00:00 'C"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/MAX_temp"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/MAX_temp"
        app:layout_constraintTop_toBottomOf="@+id/MAX_temp" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="Monday"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/MIN_temp"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/MIN_temp"
        app:layout_constraintTop_toBottomOf="@+id/MIN_temp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="25 july 2023"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="385dp"
        android:layout_height="245dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/frame_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.507">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10sp"
            app:columnCount="2"
            app:columnOrderPreserved="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:orientation="vertical"
            app:rowCount="2"
            app:useDefaultMargins="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="98dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sunset" />

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/_00_"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/sunset"
                        android:textColor="#000000"
                        android:textSize="10sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="95dp"
                    android:layout_height="100dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/wind" />

                    <TextView
                        android:id="@+id/Wind_Speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/_0_00m_s"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/wind_speed"
                        android:textColor="#000000"
                        android:textColorHighlight="#000000"
                        android:textSize="10sp" />


                </LinearLayout>

                <LinearLayout

                    android:layout_width="90dp"
                    android:layout_height="98dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/humidity" />

                    <TextView
                        android:id="@+id/Humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/_00"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/humidity"
                        android:textColor="#000000"
                        android:textSize="10sp" />


                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="98dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sunrise" />

                    <TextView
                        android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/_00_00"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/sunrise"
                        android:textColor="#000000"
                        android:textSize="10sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="98dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/conditions" />

                    <TextView
                        android:id="@+id/Sunny"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/sunny"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/condiation"
                        android:textColor="#000000"
                        android:textSize="10sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="90dp"
                    android:layout_height="98dp"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:background="@drawable/frame_shape"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/sea" />

                    <TextView
                        android:id="@+id/sea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/_000_hpa"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/merriweathersans_medium"
                        android:text="@string/sea"
                        android:textColor="#000000"
                        android:textSize="10sp" />


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>